--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,4 +14,16 @@ aaron:
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
 
-
+saki:
+  id: 3
+  login: sakinijino0725@163.com
+  salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
+  crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
+  created_at: <%= 1.days.ago.to_s :db %>
+  weight: 62
+  height: 172
+  nickname: saki
+  fitfoot: R
+  birthday: <%= Date.new(1984,3,10) %>
+  summary: weFootball!
+  
