--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -45,7 +45,7 @@ mike2:
 
 mike3:
   id: 6
-  nickname: mike3
+  nickname: majk
   login: mike3@163.com
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
