--- a/test/fixtures/team_images.yml
+++ b/test/fixtures/team_images.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  filename: MyString
-  content_type: MyString
-  size: 1
-  team_id: 1
-
-two:
-  filename: MyString
-  content_type: MyString
-  size: 1
+inter_image:
+  filename: mm4.jpg
+  content_type: image/pjpeg
+  size: 79683
   team_id: 1
