--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,6 +20,8 @@ saki:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
+  is_playable: true
+  premier_position: CB
   weight: 62
   height: 172
   nickname: saki
