--- a/test/fixtures/match_invitations.yml
+++ b/test/fixtures/match_invitations.yml
@@ -1,63 +1,63 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-one:
-  start_time: 2008-02-29 10:42:30
-  location: MyString
-  match_type: 1
-  size: 1
-  has_judge: false
-  has_card: false
-  has_offside: false
-  win_rule: 1
-  description: MyText
-  half_match_length: 1
-  rest_length: 1
-  host_team_leader_id: 1
-  guest_team_leader_id: 1
-  host_team_id: 1
-  guest_team_id: 1
-  edit_by_host_team: false
-  new_start_time: 2008-02-29 10:42:30
-  new_location: MyString
-  new_match_type: 1
-  new_size: 1
-  new_has_judge: false
-  new_has_card: false
-  new_has_offside: false
-  new_win_rule: 1
-  new_description: MyText
-  new_half_match_length: 1
-  new_rest_length: 1
-  new_host_team_leader_id: 1
-  new_guest_team_leader_id: 1
-
-two:
-  start_time: 2008-02-29 10:42:30
-  location: MyString
-  match_type: 1
-  size: 1
-  has_judge: false
-  has_card: false
-  has_offside: false
-  win_rule: 1
-  description: MyText
-  half_match_length: 1
-  rest_length: 1
-  host_team_leader_id: 1
-  guest_team_leader_id: 1
-  host_team_id: 1
-  guest_team_id: 1
-  edit_by_host_team: false
-  new_start_time: 2008-02-29 10:42:30
-  new_location: MyString
-  new_match_type: 1
-  new_size: 1
-  new_has_judge: false
-  new_has_card: false
-  new_has_offside: false
-  new_win_rule: 1
-  new_description: MyText
-  new_half_match_length: 1
-  new_rest_length: 1
-  new_host_team_leader_id: 1
-  new_guest_team_leader_id: 1
+#one:
+#  start_time: 2008-02-29 10:42:30
+#  location: MyString
+#  match_type: 1
+#  size: 1
+#  has_judge: false
+#  has_card: false
+#  has_offside: false
+#  win_rule: 1
+#  description: MyText
+#  half_match_length: 1
+#  rest_length: 1
+#  host_team_leader_id: 1
+#  guest_team_leader_id: 1
+#  host_team_id: 1
+#  guest_team_id: 1
+#  edit_by_host_team: false
+#  new_start_time: 2008-02-29 10:42:30
+#  new_location: MyString
+#  new_match_type: 1
+#  new_size: 1
+#  new_has_judge: false
+#  new_has_card: false
+#  new_has_offside: false
+#  new_win_rule: 1
+#  new_description: MyText
+#  new_half_match_length: 1
+#  new_rest_length: 1
+#  new_host_team_leader_id: 1
+#  new_guest_team_leader_id: 1
+#
+#two:
+#  start_time: 2008-02-29 10:42:30
+#  location: MyString
+#  match_type: 1
+#  size: 1
+#  has_judge: false
+#  has_card: false
+#  has_offside: false
+#  win_rule: 1
+#  description: MyText
+#  half_match_length: 1
+#  rest_length: 1
+#  host_team_leader_id: 1
+#  guest_team_leader_id: 1
+#  host_team_id: 1
+#  guest_team_id: 1
+#  edit_by_host_team: false
+#  new_start_time: 2008-02-29 10:42:30
+#  new_location: MyString
+#  new_match_type: 1
+#  new_size: 1
+#  new_has_judge: false
+#  new_has_card: false
+#  new_has_offside: false
+#  new_win_rule: 1
+#  new_description: MyText
+#  new_half_match_length: 1
+#  new_rest_length: 1
+#  new_host_team_leader_id: 1
+#  new_guest_team_leader_id: 1
