--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -21,7 +21,7 @@ saki:
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
   is_playable: true
-  premier_position: CB
+  premier_position: 2
   weight: 62
   height: 172
   nickname: saki
