--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -23,6 +23,13 @@ saki_3:
   is_private: true
   user_id: 3
 
+saki_4:
+  title: Title1
+  content: Content1
+  team_id: 1
+  is_private: true
+  user_id: 3
+
 quentin_2:
   id: 2
   title: Title2
