--- a/test/fixtures/trainings.yml
+++ b/test/fixtures/trainings.yml
@@ -15,3 +15,19 @@ training2:
   location: Shanghai
   summary: Test Training 2
   team_id: 1
+
+training3:
+  id: 3
+  start_time: <%= Time.now.since(3600).to_s(:db)%>
+  end_time: <%= Time.now.since(7200).to_s(:db)%>
+  location: Beijing, PKU
+  summary: Test Training 1
+  team_id: 1
+
+training4:
+  id: 4
+  start_time: <%= Time.now.since(3600).to_s(:db)%>
+  end_time: <%= Time.now.since(7200).to_s(:db)%>
+  location: Shanghai
+  summary: Test Training 2
+  team_id: 1
