--- a/test/fixtures/match_joins.yml
+++ b/test/fixtures/match_joins.yml
@@ -1,17 +1,21 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-#one:
-#  match_id: 1
-#  user_id: 1
-#  goal: 1
-#  yellow_cards: 1
-#  red_cards: 1
-#  position: MyString
-#
-#two:
-#  match_id: 1
-#  user_id: 1
-#  goal: 1
-#  yellow_cards: 1
-#  red_cards: 1
-#  position: MyString
+one:
+  match_id: 1
+  user_id: 1
+  team_id: 1
+  goal: 1
+  yellow_card: 1
+  red_card: 1
+  position: 1
+  status: 1
+
+two:
+  match_id: 1
+  user_id: 1
+  team_id: 1
+  goal: 1
+  yellow_card: 1
+  red_card: 1
+  position: 1
+  status: 1
