--- a/test/fixtures/plays.yml
+++ b/test/fixtures/plays.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+ play1:
+   id: 1
+   football_ground_id: 1
+   location: '北大第一体育场'
+   
