--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -30,6 +30,36 @@ saki_4:
   is_private: true
   user_id: 3
 
+saki_5:
+  title: Title1
+  content: Content1
+  team_id: 1
+  match_id: 1
+  is_private: true
+  user_id: 3
+
+saki_6:
+  title: Title1
+  content: Content1
+  team_id: 1
+  match_id: 1
+  user_id: 3
+
+saki_7:
+  title: Title1
+  content: Content1
+  team_id: 2
+  match_id: 1
+  is_private: true
+  user_id: 3
+
+saki_8:
+  title: Title1
+  content: Content1
+  team_id: 2
+  match_id: 1
+  user_id: 3
+
 quentin_2:
   id: 2
   title: Title2
