--- a/test/fixtures/matches.yml
+++ b/test/fixtures/matches.yml
@@ -3,6 +3,7 @@ one:
   host_team_id: 1
   guest_team_id: 2
   start_time: 2000-01-01 00:00:00
+  end_time: 2000-01-01 01:00:00
   location: "default_location"
 
 two:
@@ -10,4 +11,5 @@ two:
   host_team_id: 1
   guest_team_id: 2
   start_time: 2000-01-01 00:00:00
+  end_time: 2000-01-01 01:00:00
   location: "default_location"
