--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -60,6 +60,28 @@ saki_8:
   match_id: 1
   user_id: 3
 
+saki_9:
+  title: Title1
+  content: Content1
+  team_id: 1
+  sided_match_id: 1
+  user_id: 3
+
+saki_10:
+  title: Title1
+  content: Content1
+  team_id: 1
+  sided_match_id: 1
+  user_id: 3
+
+saki_11:
+  title: Title1
+  content: Content1
+  team_id: 1
+  sided_match_id: 1
+  is_private: true
+  user_id: 3
+
 quentin_2:
   id: 2
   title: Title2
