--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -19,8 +19,8 @@ aaron:
 saki:
   id: 3
   login: sakinijino0725@163.com
-  salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
-  crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
+  salt: d1bbbbec008ce7b1bac89cbe44567daafef87c6a
+  crypted_password: 4e605d9e1056fee1854eb48cc47e08359c852db7 #111111
   created_at: <%= 1.days.ago.to_s :db %>
   activated_at: <%= 5.days.ago.to_s :db %>
   is_playable: true
