--- a/test/fixtures/offical_matches.yml
+++ b/test/fixtures/offical_matches.yml
@@ -1,7 +1,6 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-# one:
-#   column: value
-#
-# two:
-#   column: value
+one:
+  id: 1
+  host_offical_team_id: 1
+  guest_offical_team_id: 2
+  start_time: 2000-01-01 00:00:00
+  location: "default_location"
