--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -5,21 +5,24 @@ saki_1:
   title: Title1
   content: Content1
   team_id: 1
-  training_id: 1
+  activity_id: 1
+  type: TrainingPost
   user_id: 3
 
 saki_2:
   title: Title1
   content: Content1
   team_id: 1
-  training_id: 1
+  activity_id: 1
+  type: TrainingPost
   user_id: 3
 
 saki_3:
   title: Title1
   content: Content1
   team_id: 1
-  training_id: 1
+  activity_id: 1
+  type: TrainingPost
   is_private: true
   user_id: 3
 
@@ -27,6 +30,7 @@ saki_4:
   title: Title1
   content: Content1
   team_id: 1
+  type: Post
   is_private: true
   user_id: 3
 
@@ -34,7 +38,8 @@ saki_5:
   title: Title1
   content: Content1
   team_id: 1
-  match_id: 1
+  activity_id: 1
+  type: MatchPost
   is_private: true
   user_id: 3
 
@@ -42,14 +47,16 @@ saki_6:
   title: Title1
   content: Content1
   team_id: 1
-  match_id: 1
+  activity_id: 1
+  type: MatchPost
   user_id: 3
 
 saki_7:
   title: Title1
   content: Content1
   team_id: 2
-  match_id: 1
+  activity_id: 1
+  type: MatchPost
   is_private: true
   user_id: 3
 
@@ -57,28 +64,32 @@ saki_8:
   title: Title1
   content: Content1
   team_id: 2
-  match_id: 1
+  activity_id: 1
+  type: MatchPost
   user_id: 3
 
 saki_9:
   title: Title1
   content: Content1
   team_id: 1
-  sided_match_id: 1
+  activity_id: 1
+  type: SidedMatchPost
   user_id: 3
 
 saki_10:
   title: Title1
   content: Content1
   team_id: 1
-  sided_match_id: 1
+  activity_id: 1
+  type: SidedMatchPost
   user_id: 3
 
 saki_11:
   title: Title1
   content: Content1
   team_id: 1
-  sided_match_id: 1
+  activity_id: 1
+  type: SidedMatchPost
   is_private: true
   user_id: 3
 
@@ -87,5 +98,6 @@ quentin_2:
   title: Title2
   content: Content2
   team_id: 2
+  type: Post
   is_private: true
   user_id: 1
