--- a/test/fixtures/watches.yml
+++ b/test/fixtures/watches.yml
@@ -1,6 +1,7 @@
 one:
   id: 1
   start_time: 2008-05-13 20:17:56
+  end_time: 2008-05-13 22:17:56
   location: MyString
   official_match_id: 1
   user_id: 3
@@ -9,6 +10,7 @@ one:
 two:
   id: 2
   start_time: 2008-05-13 20:17:56
+  end_time: 2008-05-13 22:17:56
   location: MyString
   official_match_id: 1
   user_id: 1
