--- a/test/fixtures/replies.yml
+++ b/test/fixtures/replies.yml
@@ -4,3 +4,8 @@ quentin_1_reply:
   content: MyString
   post_id: 1
   user_id: 1
+
+quentin_2_reply:
+  content: MyString
+  post_id: 3
+  user_id: 1
